# hyprdm

./: DOCUMENTARY.md  README.md
gui-api/: Cargo.toml  build.sh
gui-api/config/: Cargo.toml
gui-api/config/src/: config_manager.rs  lib.rs  parser.rs
gui-api/configmanager/: Cargo.toml
gui-api/configmanager/src/: config_manager.rs  lib.rs
gui-api/greeterd/: CMakeLists.txt  Makefile  autogen.sh
gui-api/greeterd/backend/: adapters.cpp  adapters.hpp  backend.cpp  backend.h  backend_wrapper.cpp  backend_wrapper.h  backend_wrapper.moc
gui-api/hdm_api/: Cargo.toml  build.rs  c_build.rs  hdm_build_helper  rob_build.rs
gui-api/hdm_api/src/: compositor.rs  ipc.rs  layout_manager.rs  lib.rs  session_manager.rs  theme_manager.rs  unidata.rs  user_manager.rs
gui-api/quickshell/: CMakeLists.txt  Makefile  autogen.sh
gui-api/quickshell/.env/: .beta_nondeploy  sizeof.typectl.ffi
gui-api/quickshell/Hyproman/: CMakeLists.txt  Makefile  autogen.sh  backend.cpp  main.cpp  main.qml
gui-api/quickshell/Hyproman/include/: backend.h  compositor.h  ipc.h  theme_manager.h
gui-api/quickshell/Hyproman/style/: Style.qml
gui-api/quickshell/Hyproman/test/: test.qml
gui-api/wlrootbackends/: Cargo.toml
gui-api/wlrootbackends/src/: backend.rs  hyprdmbackend.rs  lib.rs
