[package]
name = "configmanager"
version = "0.1.0"
edition = "2021"
authors = ["Zaman Huseynli <admin@azccriminal.space>"]
description = "Configuration manager for Hyprdm"
license = "BSD-3-Clause"

[[bin]]
name = "configmanager"
path = "src/config_manager.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { path = "../config" }
