[package]
name = "hdm_api"
version = "0.1.0"
edition = "2021"
authors = ["Zaman Huseynli <admin@azccriminal.space>"]
description = "Hyprdm hdm_api"
license = "BSD-3-Clause"

[lib]
name = "hdm_api"
[dependencies]
once_cell = "1.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
otpauth = "0.5.0"         
digest = "0.10"
smithay = "0.3"
pam-client = "0.1"
config = { path = "../config" }
slog = "2.7.0"
winit = "0.30.12"
libc = "0.2.177"

[features]
default = []      
c_ffi = []